- Standardize format code/ogranize import - Add more test - Fix some naming issue